[package]
name = "gh-context"
version = "0.1.4"
edition = "2024"
repository = "https://github.com/hdcodedev/gh-context"
description = "A CLI tool for fetching GitHub Issue and Pull Request context."
license = "MIT"
readme = "README.md"
keywords = ["github", "cli", "context", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]
[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
